--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
-    id 'java'
+
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 group 'org.openjfx'
@@ -17,3 +19,10 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+javafx {
+    version = "17.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+mainClassName = 'org.openjfx.MainApp'
