[Ayrton] Tentanto corrigir o erro

--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,12 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
+sourceSets {
+    test {
+        java {
+            srcDirs = ['src/test']
+        }
+    }
+}
+
 mainClassName = 'org.openjfx.MainApp'
